
[metadata]
name = tomography_python_programs
url = https://github.com/3dem/relion
author = RELION team
author_email = aburt@mrc-lmb.cam.ac.uk
description = package description.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD license
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

project_urls =
    Source Code =https://github.com/3dem/relion

[options]
zip_safe = False
package_dir =
    =src
packages = find:
python_requires = >=3.8
setup_requires =
    setuptools_scm
install_requires =
    numpy
    pandas
    makefun
    starfile
    mrcfile
    mdocfile
    typer
    rich
    einops
    lil_aretomo
    yet-another-imod-wrapper

[options.extras_require]
testing =
    pytest
dev =
    ipython
    jedi<0.18.0
    black
    flake8
    flake8-docstrings
    isort
    mypy
    pre-commit
    pydocstyle
    pytest
    jupyter-book

[options.entry_points]
console_scripts =
    relion_tomo_import = tomography_python_programs.import_tilt_series:cli
    relion_tomo_align_tilt_series = tomography_python_programs.tilt_series_alignment:cli
    relion_tomo_denoise = tomography_python_programs.denoising:cli

[bdist_wheel]
universal = 1

[flake8]
exclude = docs,_version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore =  D100, D213, D401, D413, D107, W503

[isort]
profile = black
src_paths = src/tomography_python_programs

[pydocstyle]
match_dir = src/tomography_python_programs
convention = numpy
add_select = D402,D415,D417
ignore = D100, D213, D401, D413, D107

[tool:pytest]
addopts = -W error

[mypy]
files = src/tomography_python_programs
warn_unused_configs = True
warn_unused_ignores = True
check_untyped_defs = True
implicit_reexport = False
# this is strict!
# disallow_untyped_defs = True
show_column_numbers = True
show_error_codes = True
ignore_missing_imports = True


